--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#D30F1E</color>
+    <color name="colorPrimaryDark">#861720</color>
+    <color name="colorPrimaryLight">#FC1224</color>
+    <color name="colorTextIcons">#ffffff</color>
+    <color name="colorAccent">#1B72A0</color>
+    <color name="colorAccentDark">#035986</color>
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorSecondaryText">#727272</color>
+    <color name="colorDivider">#B6B6B6</color>
 </resources>
