--- a/app/src/main/res/layout/activity_game_start.xml
+++ b/app/src/main/res/layout/activity_game_start.xml
@@ -18,12 +18,6 @@
         android:layout_below="@+id/startLayout"
         android:layout_marginTop="30dp">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:id="@+id/actorImageView"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/seats" />
     </LinearLayout>
 
     <LinearLayout
@@ -31,17 +25,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/actorNameLayout"
-        android:layout_below="@+id/imageLayout"
+        android:layout_below="@+id/actorImageView"
         android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="name"
-            android:id="@+id/actorNameTextView"
-            android:layout_gravity="center_horizontal"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:text="New Text"
+            android:id="@+id/actorTextView" />
     </LinearLayout>
 
     <LinearLayout
@@ -75,4 +66,12 @@
             android:layout_gravity="center_horizontal"
             android:textSize="20dp" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/actorImageView"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/seats"
+        android:layout_below="@+id/startLayout" />
 </RelativeLayout>
