add win condition and activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#861720</color>
     <color name="colorPrimaryLight">#FC1224</color>
     <color name="colorTextIcons">#ffffff</color>
-    <color name="colorAccent">#1B72A0</color>
+    <color name="colorAccent">#1b72a0</color>
     <color name="colorAccentDark">#035986</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#727272</color>
