--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.guest.movieapp.WinActivity">
 
     <ImageView
@@ -16,7 +12,9 @@
         android:src="@drawable/winbacon"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/playAgainButton"
+        android:layout_alignEnd="@+id/playAgainButton" />
 
     <Button
         android:layout_width="match_parent"
@@ -33,18 +31,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Final Score:"
-        android:id="@+id/textView"
+        android:id="@+id/scoreTextView"
         android:textSize="30sp"
         android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="score"
-        android:id="@+id/finalScoreTextView"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:textSize="40dp"
-        android:textStyle="bold" />
+        android:id="@+id/scrollView"
+        android:layout_below="@+id/scoreTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/playAgainButton"
+        android:paddingRight="15dp"
+        android:paddingLeft="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really long text to test scroll view"
+            android:id="@+id/degreesTextView"
+            android:textSize="20sp" />
+    </ScrollView>
+
 </RelativeLayout>
